scss/common/_topic-post.scss
/* ... */
.topic-meta-data {
  .topic-post & {
    align-items: center;
    display: flex;
    min-height: ($card-avatar-size + $card-padding-y);
    padding: $card-padding-y ($card-padding-x / 2) 0 ($card-avatar-size + $card-inner-spacer-y + $card-padding-y);
  }

  .post-info {
    margin-right: 0;

    a {
      @include btn-base;

      color: color-chooser($white-secondary, $black-secondary);
      font-size: $btn-font-size-sm;
      padding: $btn-padding-y-sm $card-inner-spacer-x;
    }
  }
}

.topic-notifications-button .reason {
  margin-bottom: 0;
}

.topic-post {
  border-left: 0;

  .boxed > .row {
    position: relative;

    + .row .topic-body {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
  }
}

#topic-progress {
  border-top-right-radius: $btn-border-radius;
  flex-shrink: 0;
  height: $btn-height;

  .bg {
    border-top-right-radius: $btn-border-radius;
    max-width: 100%;
  }
}

#topic-progress-wrapper {
  border-top-right-radius: $btn-border-radius;
  box-shadow: $card-box-shadow;
  display: flex;
  margin-right: auto;
  right: 0;
  width: auto;

  &.docked {
    border-bottom-right-radius: $btn-border-radius;

    .topic-admin-menu-button-container .toggle-admin-menu.widget-button {
      border-bottom-left-radius: $btn-border-radius;
    }

    .topic-admin-popup-menu {
      border-bottom-left-radius: $dropdown-border-radius;
      border-bottom-right-radius: $dropdown-border-radius;
    }

    #topic-progress {
      &,
      .bg {
        border-bottom-right-radius: $btn-border-radius;
      }
    }
  }

  .popup-menu {
    h3 {
      @include dropdown-header;
    }

    .btn {
      @include dropdown-link;
    }
  }

  .topic-admin-menu-button-container {
    top: auto;
    left: ($btn-padding-x * -2 - $material-icon-size);
    width: auto;

    .toggle-admin-menu.widget-button {
      border-right: 0;
      border-top-right-radius: 0;
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
      height: auto;

      .fa {
        vertical-align: top;
      }
    }

    .widget-button {
      border-right: 0;
    }
  }

  .topic-admin-popup-menu {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

.topic-status-info {
  border-top: 0;
  height: auto;
  margin-top: $spacer-y;
  margin-bottom: $spacer-y;
  padding: 0;

  &:empty {
    display: none;
  }
}

#topic-title {
  margin-bottom: ($spacer-y * 2);
  padding-top: 0;

  a {
    &.edit-topic {
      color: unquote('$tertiary');
      font-size: $font-size-base;
      line-height: 1;
      vertical-align: middle;
    }
  }

  h1 {
    @include typography-h1;

    font-family: $font-family-serif;
    font-weight: normal;
    margin: 0 0 ($spacer-y * 2);
    overflow: visible;
  }

  .private-message-glyph {
    float: none;
    font-size: $font-size-base;
    line-height: 1;
    margin: 0;
    vertical-align: middle;
  }

  .title-wrapper {
    float: none;
    width: auto;
  }

  .topic-category {
    margin-top: 0;
  }

  .topic-statuses {
    display: inline-block;
    float: none;
    font-size: $font-size-base;
    line-height: 1;
    margin: 0;
    vertical-align: middle;

    &:empty {
      display: none;
    }
  }
}

.whisper .post-info.whisper {
  color: color-chooser($white-secondary, $black-secondary);
  margin-right: $card-inner-spacer-x;
  margin-left: 0;
}

.who-liked {
  align-items: center;
  clear: both;
  display: flex;
  flex-wrap: wrap;
  margin-top: 0;
  margin-bottom: ($card-inner-spacer-y / 2);
  text-align: inherit;

  a {
    margin-top: (($btn-height - $material-icon-size) / 2);
    margin-right: $card-inner-spacer-x;
    margin-bottom: (($btn-height - $material-icon-size) / 2);
  }

  .avatar {
    height: $material-icon-size;
    width: $material-icon-size;
  }
}

